# egt-samples

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  README.md  configure.ac
AngryMeatballs/: .gitignore  AngryMeatballs.xml  Ball.cpp  Ball.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Makefile.am  RotateImageWidget.cpp  RotateImageWidget.h  gdbinit  main.cpp
animations/: Makefile.am  animations.cpp
brick/: CMakeLists.txt  Makefile.am  brick.cpp
chipdrop/: .gitignore  Makefile.am  chipdrop.cpp  shape.cpp  shape.h
drop/: CMakeLists.txt  Makefile.am  drop.cpp  drop.xml  shape.cpp  shape.h
gallery/: .gitignore  CMakeLists.txt  Makefile.am  README.md  gallery.cpp
gallery/movies/: .gitignore  encode.sh
icon/: CMakeLists.txt  Makefile.am  icon.cpp
infotain/: Makefile.am  infotain.cpp
layout/: .gitignore  CMakeLists.txt  Makefile.am  layout.cpp
newsfeed/: .gitignore  CMakeLists.txt  Makefile.am  newsfeed.cpp
ragdoll/: .gitignore  CMakeLists.txt  Makefile.am  hooman.cpp  hooman.h  ragdoll.cpp
water/: CMakeLists.txt  Makefile.am  water.cpp
weather/: CMakeLists.txt  Makefile.am  README.md  weather.cpp
